# comms-cpp-injection-demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  demo.py  setup.bat  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis-cpp.yml  codeql-analysis-python.yml  codeql-analysis.yml  codeql.yml
cmake/: ffmpeg.cmake  windows.cmake
conversations/00_DolbyIO_Demo/: Dan.m4a  Ruth.m4a  def.json
conversations/01_Meeting/: Jane.m4a
conversations/11_DolbyIOSpatial/: def.json
demo-content/: demo.py  injection-input.json
demo-content/conversations/00_DolbyIO_Demo/: JC.m4a
demo-content/conversations/01_Meeting/: AnnaA.m4a  JohnH.m4a  Mark.m4a  Pete.m4a  Steven.m4a  def.json  from.txt
setup/: unix.sh  windows.bat
src/: CMakeLists.txt  main.cc
src/linux/: daemonize.cc  daemonize.h
src/utils/: commands_handler.cc  commands_handler.h  interactor.h
src/wrappers/: command_line_params.cc  command_line_params.h  mediaio.cc  mediaio.h  sdk.cc  sdk.h
